force-app/main/default/objects/Adyen_Metadata_Deployment_Result__e/Adyen_Metadata_Deployment_Result__e.object-meta.xml
<CustomObject>
    <label>Adyen Metadata Deployment Result</label>
    <pluralLabel>Adyen Metadata Deployment Results</pluralLabel>
</CustomObject>