force-app/main/default/objects/Adyen_Metadata_Deployment_Result__e/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <label>Deployment ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>